Se ago la pantalla Detalles de un producto

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
     </nav>
 
-    <aside class="product-detail inactive">
+    <aside id="shoppingCartContainer" class="inactive">
         <div class="title-container">
             <img src="./icons/flechita.svg" alt="arrow">
             <p class="title">My oreder</p>
@@ -222,6 +222,24 @@
         </div>
     </aside>
 
+    <aside id="productDetail" class="inactive">
+        <div class="product-detail-close">
+            <img src="./icons/icon_close.png" alt="close">
+        </div>
+        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
+        <div class="product-info">
+            <p>$35,00</p>
+            <p>Bike</p>
+            <p>Una tendencia de montaña en una de las mejores líneas de Mercurio, 
+                la Kaizer 29 será una de las mejores opciónes en transporte, 
+                disfruta los atributos de esta rodada, para las personas que saben 
+                de tendencias, un producto diferente y especial.
+            </p>
+            <button class="primary-button, add-to-cart-button">
+                <img src="./icons/bt_add_to_cart.svg" alt="add to cart">Add to cart</button>
+        </div>
+    </aside>
+
     <section class="main-container">
         <div class="cards-container">
 
@@ -240,8 +258,6 @@
 
         </div>
     </section>
-
-
 
     <script src="./main.js"></script>
 </body>
