Interacion entre todos los componentes

--- a/index.html
+++ b/index.html
@@ -226,15 +226,11 @@
         <div class="product-detail-close">
             <img src="./icons/icon_close.png" alt="close">
         </div>
-        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
+        <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike" id="img_product">
         <div class="product-info">
             <p>$35,00</p>
             <p>Bike</p>
-            <p>Una tendencia de montaña en una de las mejores líneas de Mercurio, 
-                la Kaizer 29 será una de las mejores opciónes en transporte, 
-                disfruta los atributos de esta rodada, para las personas que saben 
-                de tendencias, un producto diferente y especial.
-            </p>
+            <p>With its practical position, this bike also fulfills a decorative function, add your hall or workspace.</p>
             <button class="primary-button, add-to-cart-button">
                 <img src="./icons/bt_add_to_cart.svg" alt="add to cart">Add to cart</button>
         </div>
